--- a/recipes/spaghetti_carbonara.html
+++ b/recipes/spaghetti_carbonara.html
@@ -7,6 +7,6 @@
     <title>spaghetti carbonara</title>
 </head>
 <body>
-    <h1>spaghetti carbonara</h1>
+    <h1>Spaghetti carbonara</h1>
 </body>
 </html>
