--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <p><a href="./recipes/lasagna.html">Lasagna</a></p>
+    <p><a href="./recipes/spaghetti_bolognese.html">Spaghetti bolognese</a></p>
+    <p><a href="./recipes/spaghetti_carbonara.html">Spaghetti carbonara</a></p>
+
 </body>
 </html>
