--- a/recipes/spaghetti_bolognese.html
+++ b/recipes/spaghetti_bolognese.html
@@ -7,6 +7,6 @@
     <title>spaghetti bolognese</title>
 </head>
 <body>
-    <h1>spaghetti bolognese</h1>
+    <h1>Spaghetti bolognese</h1>
 </body>
 </html>
