--- a/recipes/spaghetti_bolognese.html
+++ b/recipes/spaghetti_bolognese.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>Spaghetti bolognese</h1>
+    <ol>
+        <li> Chop the vegetables: In a food processor, combine the onion, 
+            carrot, and celery. Pulse until finely chopped. </li>
+        <li> Cook the vegetables:In a deep, wide skillet over medium heat, melt the butter. 
+            Add the onions, carrots, and celery. Cook, stirring often, for 5 minutes, or until 
+            soft and translucent but not browned. </li>
+        <li> Cook the beef: Add the ground beef to the skillet with the sautéed vegetables. 
+            Add the salt and pepper. Break the meat up with a fork or a potato masher and cook 
+            over medium heat for 3 to 4 minutes, mashing it until it is crumbly and no longer pink. 
+            You are not actually browning the meat, just cooking it until it no longer looks raw. </li>
+        <li> Simmer the meat and milk: Add the milk to the skillet and simmer, stirring often, for about 4 minutes,
+             or until the milk has almost completely evaporated. Stir in the nutmeg. </li>
+        <li> Add the wine: Add the wine to the skillet and continue to simmer for about 5 minutes, or until it has almost evaporated. </li>
+        <li> Crush and add the tomatoes:Pour the tomatoes into a bowl and squish them with your hands to break them up so there are no large pieces.
+            Add them to the skillet and bring the sauce to a simmer. Turn the heat to low and simmer the sauce for 15 to 20 minutes, stirring occasionally,
+            until the sauce is thick. If the sauce begins to look dry, stir in 1 to 2 tablespoons hot water. Taste and add more salt and pepper if you feel 
+            it's needed. </li>
+        <li> Serve: Serve the sauce over a bed of cooked spaghetti. </li>
+    </ol>
 </body>
 </html>
