--- a/recipes/spaghetti_bolognese.html
+++ b/recipes/spaghetti_bolognese.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <h1>Spaghetti bolognese</h1>
+    <img src="./bolognese.jpeg" alt="Spaghettti with bolognese sauce">
+    <p><strong>ingredients</strong></p>
+    <ul>
+        <li>1/2 large yellow onion, cut into 2-inch chunks</li>
+        <li>1 large carrot, peeled and thickly sliced</li>
+        <li>1 large stalk celery, thickly sliced</li>
+        <li>2 tablespoons unsalted butter</li>
+        <li>1 pound ground beef</li>
+        <li>1/2 teaspoon table salt</li>
+        <li>1/8 teaspoon freshly ground black pepper</li>
+        <li>1/2 cup whole milk</li>
+        <li>inch nutmeg</li>
+        <li>3/4 cup dry white wine</li>
+        <li>1 (28-ounce) can whole San Marzano or other good quality tomatoes with thick juice</li>
+        <li>12 ounces cooked pasta (for serving) </li>
+    </ul>
+    <p><strong>steps</strong></p>
     <ol>
         <li> Chop the vegetables: In a food processor, combine the onion, 
             carrot, and celery. Pulse until finely chopped. </li>
