--- a/recipes/spaghetti_carbonara.html
+++ b/recipes/spaghetti_carbonara.html
@@ -7,7 +7,20 @@
     <title>spaghetti carbonara</title>
 </head>
 <body>
+    
     <h1>Spaghetti carbonara</h1>
+    <img src="./carbonara.gif" alt="Spaghetti with carbonara">
+    <p><strong>ingredients</strong></p>
+    <ul>
+        <li>1 tablespoon extra virgin olive oil or unsalted butter</li>
+        <li>1/2 pound pancetta or thick cut bacon, diced</li>
+        <li>1-2 garlic cloves, minced, about 1 teaspoon (optional)</li>
+        <li>3-4 whole eggs </li>
+        <li>1 cup grated Parmesan or pecorino cheese</li>
+        <li>1 pound spaghetti (or bucatini or fettuccine)</li>
+        <li>Salt and black pepper to taste </li>
+    </ul>
+    <p><strong>steps</strong></p>
     <ol>
         <li> Heat pasta water: Put a large pot of salted water on to boil 
             (1 tablespoon salt for every 2 quarts of water.) </li>
